<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rel_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/upload_from"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginRight="@dimen/margin_twenty"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_marginLeft="@dimen/margin_fourty"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_fourty"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/clickImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_camera"
                    android:padding="14sp"
                    android:background="@drawable/brown_circle"/>

                <TextView
                    android:id="@+id/tvCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/camera"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_fifty"
                android:layout_marginBottom="@dimen/margin_fourty"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/selectImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_gallery"
                    android:padding="14dp"
                    android:background="@drawable/brown_circle"
                    />

                <TextView
                    android:id="@+id/tvGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCamera"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/gallery"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>